gcc/testsuite/gdc.test/fail_compilation/ice11136.d
// EXTRA_SOURCES: imports/bar11136.d
/*
TEST_OUTPUT:
---
fail_compilation/imports/bar11136.d(1): Error: package name 'ice11136' conflicts with usage as a module name in file fail_compilation/ice11136.d
---
*/

module ice11136;
